--- a/Index.html
+++ b/Index.html
@@ -1,3 +1,4 @@
 <b>Digital Waveguides Review</b>
 
 <a href="KarplusStrong/KarplusStrong.html">The simplest example</a>
+<a href="KarplusStrong/AudioWorklet/KarplusStrongV2.html">An audio worklet version</a>
