--- a/index.html
+++ b/index.html
@@ -1,4 +1,1 @@
-<b>Digital Waveguides Review</b>
-
-<a href="KarplusStrong/KarplusStrong.html">The simplest example</a>
-<a href="KarplusStrong/AudioWorklet/KarplusStrongV2.html">An audio worklet version</a>
+<b>Digital Waveguides Review - Code examples</b>
