--- a/Test/TestFeedbackWorklet/index.html
+++ b/Test/TestFeedbackWorklet/index.html
@@ -14,4 +14,8 @@
   DelayLabel.innerHTML = Delay.value
   WidthLabel.innerHTML = Width.value
 </script>
+<script src='recorder.js'></script>
+<button onclick='Start()'>Start</button>
+<button onclick='Stop()'>Stop</button>
+<audio controls id='audio'></audio>
 <script src='KarplusStrongV2.js'></script>
