--- a/index2.html
+++ b/index2.html
@@ -44,9 +44,8 @@ This is because a number is repeated after its sign is inverted twice, effective
 
 
 <h2>Digital Waveguide Filters</h2>
-The previous model had sustained high frequencies, giving it an unrealistic timbre. 
-However, a physical medium absorbs high frequencies more heavily than low ones. 
-A filter is placed inside the loop to model this. 
+A physical medium absorbs high frequencies more heavily than low ones. 
+This can be modeled by placing a filter inside the loop. 
 The following model has lowpass filters both inside the loop and filtering only the excitation. 
 The lowpass filters are the default filters for the Web Audio API.<br>
  
