--- a/WorkletImplementations/KarplusStrong/KarplusStrongV2.html
+++ b/WorkletImplementations/KarplusStrong/KarplusStrongV2.html
@@ -1,3 +1,4 @@
+<h2>Simplified Karplus Strong v2- An audio worklet version</h2>
 <p>Decay</p>
 <input type='range' min=0.8 max='0.999' value='0.9' step='any' id='Decay'>
 <span id='DecayLabel'></span>
