--- a/DWfilters/DWfilters.html
+++ b/DWfilters/DWfilters.html
@@ -4,6 +4,7 @@ A physical medium absorbs high frequencies more heavily than low ones.
 This can be modeled by placing a filter inside the loop. 
 The following model has lowpass filters both inside the loop and filtering only the excitation. 
 The lowpass filters are the default filters for the Web Audio API.<br>
+
+<img src="DWfilter.png" width = 613 height=154><br>
  
-To Do!<br>
 A basic waveguide model with two filters.
