--- a/Test/javascript-karplus-strong-master/04 KSfilterControls- character pluckdamp/Worklet version/KarplusStrongV2.html
+++ b/Test/javascript-karplus-strong-master/04 KSfilterControls- character pluckdamp/Worklet version/KarplusStrongV2.html
@@ -2,11 +2,13 @@
 <input type='button' value='play' id='Play'><br>
   <input type="range" id="pitchSlider" oninput="getControlsValues()" min="0.1" max="1000" step="0.1" value="130">
   <output id="pitchValue">130</output> Pitch<br>
+  <input type="range" id="characterVariationSlider" oninput="getControlsValues()" min="0" max="1" step="0.1" value="0.5">
+  <output id="characterVariationValue">0.5</output> Character variation<br>
   <input type="range" id="stringDampingSlider" oninput="getControlsValues()" min="0.1" max="0.7" step="0.1" value="0.5">
   <output id="stringDampingValue">0.5</output> String damping<br>
   <input type="range" id="stringDampingVariationSlider" oninput="getControlsValues()" min="0.0" max="0.5" step="0.05" value="0.25">
   <output id="stringDampingVariationValue">0.25</output> String damping variation<br>
-  <input type="range" id="pluckDampingSlider" oninput="getControlsValues()" min="0.1" max="0.9" step="0.1" value="0.5">
+  <input type="range" id="pluckDampingSlider" oninput="getControlsValues()" min="0.0" max="1.0" step="0.1" value="0.5">
   <output id="pluckDampingValue">0.5</output> Pluck damping<br>
   <input type="range" id="pluckDampingVariationSlider" oninput="getControlsValues()" min="0.0" max="0.5" step="0.05" value="0.25">
   <output id="pluckDampingVariationValue">0.25</output> Pluck damping variation<br>
@@ -15,24 +17,36 @@
 <script>
   var context = new AudioContext
   context.audioWorklet.addModule('KSWorklets.js').then(() => {
-    let Noise = new AudioWorkletNode(context,'noise-generator'),
-    NoiseGain = new GainNode(context,{gain:0}),
+    let noise = new AudioWorkletNode(context,'noise-generator'),
+    character = new AudioWorkletNode(context,'noise-generator'),
+    PluckDamper = new AudioWorkletNode(context,'smoothing-filter',
+      {parameterData:{pitch:130,gain:0.96,smoothingFactor:pluckDampingValue.value}
+    }),
+    input = new GainNode(context,{gain:0}),
+    noiseGain = new GainNode(context,{gain:0.5}),
+    characterGain = new GainNode(context,{gain:0.5}),
     output = new GainNode(context),
     feedbackDelay= new AudioWorkletNode(context,'feedbackDelay-processor',
       {parameterData:{pitch:130,gain:0.96,smoothingFactor:stringDampingValue.value}
     })
-    Noise.connect(NoiseGain)
-    NoiseGain.connect(output)
-    NoiseGain.connect(feedbackDelay)
+    noise.connect(noiseGain)
+    character.connect(characterGain)
+    noiseGain.connect(PluckDamper)
+    characterGain.connect(PluckDamper)
+    PluckDamper.connect(input)
+    input.connect(output)
+    input.connect(feedbackDelay)
     feedbackDelay.connect(output)
     output.connect(context.destination)
     Play.onclick = function() {
       context.resume()
       feedbackDelay.parameters.get('pitch').value = pitchValue.value
       feedbackDelay.parameters.get('smoothingFactor').value = stringDampingValue.value
+      PluckDamper.parameters.get('smoothingFactor').value = pluckDampingValue.value
       let now = context.currentTime
-      NoiseGain.gain.setValueAtTime(0.125, now)
-      NoiseGain.gain.setValueAtTime(0, now+0.009)
+      input.gain.setValueAtTime(0.125, now)
+      input.gain.setValueAtTime(0, now+0.009)
+      //setTimeout(() => feedbackDelay.port.postMessage('stop'), 1000)
     }
   })
 </script>
