--- a/04_KarplusStrongV2/KarplusStrongV2.html
+++ b/04_KarplusStrongV2/KarplusStrongV2.html
@@ -1,4 +1,7 @@
 <h2>Simplified Karplus Strong v2- An audio worklet version</h2>
+
+Here, we revisit the previous example, and show how it can be achieved using audio worklets instead.
+
 <p>Decay</p>
 <input type='range' min=0.8 max='0.999' value='0.9' step='any' id='Decay'>
 <span id='DecayLabel'></span>
